--- a/css/custom.css
+++ b/css/custom.css
@@ -1513,7 +1513,13 @@ margin: 69px auto 20px auto;*/
     }
 }
 #player {
-    width: 570px;
-    min-height: 320px;
+    min-width: 570px;
     margin: 0 auto;
+}
+@media (max-width: 475px) {
+    #player {
+        min-width: 100%;
+        margin: 0 auto;
+    }
+    
 }
