--- a/css/custom.css
+++ b/css/custom.css
@@ -1512,16 +1512,25 @@ margin: 69px auto 20px auto;*/
         }
     }
 }
-
 #player {
-    width: auto;
-    min-width: 570px;
-    height: auto
+    width: 570px;
+    height: 320px;
     margin: 0 auto;
 }
-
 @media (max-width: 475px) {
     #player {
         display: none;
+    }
+}
+@media (max-width: 6000px) {
+    #mplayer {
+        display: none;
+    }
+}
+@media (max-width: 475px) {
+    #mplayer {
+        width: 320px;
+        height: 180px;
+        margin: 0 auto;
     }
 }
