--- a/css/custom.css
+++ b/css/custom.css
@@ -1529,8 +1529,15 @@ margin: 69px auto 20px auto;*/
         display: none;
     }
 }
-@media (max-width: 6000px) {
+@media (max-width: 475px) {
     #imgdisable {
         display: none;
+    }
+}
+@media (max-width: 475px) {
+    #mplayer {
+        width: 320px;
+        height: 180px;
+        margin: 0 auto;
     }
 }
